# lensless-encoder-telemetry

./: README.md  pyproject.toml  requirements.txt
artifacts/: validation_summary.json  validation_summary.md
artifacts/synthetic_demo/: synthetic_demo_summary.json  synthetic_demo_summary.md
data/: README.md
docs/: DATASET_READINESS.md  METHODOLOGY.md  RESEARCH_ROADMAP.md  VALIDATION_PLAN.md
examples/: synthetic_encoder_config.json
scripts/: inventory_dataset_stack.py  run_synthetic_demo.py
src/optical_telemetry_assurance/: __init__.py  evidence.py  manifest.py  metrics.py  validators.py
tests/: test_assurance.py
